manifests/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aire-prep
  labels:
    app.kubernetes.io/name: aire-prep-lab
